[project]
name = "ramifice"
version = "0.8.48"
description = "ORM-pseudo-like API MongoDB for Python language."
readme = "README.md"
authors = [{ name = "kebasyaty", email = "kebasyaty@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<4.0"
keywords = ["mongo", "mongodb", "pymongo", "orm", "ramifice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.9.0",
    "argon2-cffi>=25.1.0",
    "babel>=2.17.0",
    "email-validator>=2.2.0",
    "orjson>=3.10.18",
    "phonenumbers>=9.0.6",
    "pillow>=11.2.1",
    "pymongo>=4.13.0",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "termcolor>=3.1.0",
    "xloft>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/kebasyaty/ramifice"
Documentation = "https://kebasyaty.github.io/ramifice/"
Repository = "https://github.com/kebasyaty/ramifice"
Source = "https://github.com/kebasyaty/ramifice"
"Bug Tracker" = "https://github.com/kebasyaty/ramifice/issues"
Changelog = "https://github.com/kebasyaty/ramifice/blob/v0/CHANGELOG.md"

[tool.uv]
package = true
default-groups = ["dev", "lint", "docs", "types"]
compile-bytecode = true
check-url = "https://pypi.org/simple"

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
lint = ["mypy>=1.16.0", "pre-commit>=4.3.0", "ruff>=0.11.13"]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]
types = [
    "types-python-dateutil>=2.9.0.20250809",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250809",
]

[tool.ruff]
fix = true
line-length = 120
indent-width = 4
required-version = ">=0.7.11"
src = ["src", "tests"]
include = ["src/**/*.py", "tests/**/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".github",
    "assets",
    "config",
    "public",
    "docs",
    "site",
    "examples",
]

[tool.ruff.lint]
preview = true
select = [
    "D",     # pydocstyle
    "I",     # isort
    "E",     # flake8-errors
    "W",     # flake8-warnings
    "F",     # flake8-pyflakes
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "T20",   # flake8-print
    "T10",   # flake8-debugger
    "RUF",   # Ruff-specific
    "DTZ",   # flake8-datetimez
    "ERA",   # eradicate
    "FURB",  # refurb
    "ARG",   # flake8-unused-arguments
    "EM",    # flake8-errmsg
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "EXE",   # flake8-executable
    "ASYNC", # flake8-async
]
ignore = [
    "D417",   # Missing argument descriptions in the docstring
    "D206",   # Docstring should be indented with spaces, not tabs
    "C408",   # Unnecessary `dict` call (rewrite as a literal)
    "RUF001", # ambiguous-unicode-character-docstring
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-docstring
    "RUF022", # unsorted-dunder-all
    "E722",   # Do not use bare except
    "S110",   # try-except-pass detected, consider logging the exception
    "S101",   # Use of `assert` detected
    "PLR",    # Design related pylint codes
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "ARG002", # Unused method argument
]
fixable = ["I"]
unfixable = [
    "RUF100", # Unused noqa
    "T20",    # Removes print statements
    "F841",   # Removes unused variables
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|dummy.*)$"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
show_error_codes = true
pretty = true
files = ["src/**/*.py", "tests/**/*.py"]
disable_error_code = [
    "type-arg",
    "no-any-return",
    "attr-defined",
    "import-not-found",
    "index",
    "operator",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "no-untyped-call",
    "func-returns-value",
    "union-attr",
]
